@@ -6,6 +6,7 @@ Changes in 1.0.3:
 - Decrease authentication timeout to 5 seconds
 - Fix crash due to double delete in µTP code
 - Don't throw error when log file cannot be opened, prevents crash (246757)
+- Fix bug causing wrong download running time to be saved when a torrent is running (247384)
 
 Changes in 1.0.2:
 - Fix subtle bug causing some connections to be dropped prematurely
